--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -2,45 +2,65 @@ server:
   port: 9000
   ip: 192.168.29.226
 
+
+
 spring:
   application:
     name: API-GATEWAY
+  datasource:
+    url: jdbc:mysql://${server.ip}:3306/microservices?allowPublicKeyRetrieval=true
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    username: root
+    password: password
+  jpa:
+    defer-datasource-initialization: true
+    database-platform: org.hibernate.dialect.MySQL8Dialect
+    show-sql: false
+    hibernate:
+      ddl-auto: update
   cloud:
     gateway:
-      routes:
-        - id: USER-SERVICE
-          uri: lb://USER-SERVICE
-          predicates:
-            - Path=/user/**
-          filters:
-            - name: AuthFilter
-              args:
-                name: USER-SERVICE
-                fallbackuri: forward:/user-service-fallback
-        - id: TRACKER-SERVICE
-          uri: lb://TRACKER-SERVICE
-          predicates:
-            - Path=/tracker/**
-          filters:
-            - name: AuthFilter
-              args:
-                name: TRACKER-SERVICE
-                fallbackuri: forward:/tracker-service-fallback
-        - id: AUTH-SERVICE
-          uri: lb://AUTH-SERVICE
-          predicates:
-            - Path=/auth/**
-          filters:
-            - name: CircuitBreaker
-              args:
-                name: AUTH-SERVICE
-                fallbackuri: forward:/auth-fallback
+#      routes:
+#        - id: USER-SERVICE
+#          uri: lb://USER-SERVICE
+#          predicates:
+#            - Path=/user/**
+#          filters:
+#            - name: AuthFilter
+#              args:
+#                name: USER-SERVICE
+#                fallbackuri: forward:/user-service-fallback
+#        - id: TRACKER-SERVICE
+#          uri: lb://TRACKER-SERVICE
+#          predicates:
+#            - Path=/tracker/**
+#          filters:
+#            - name: AuthFilter
+#              args:
+#                name: TRACKER-SERVICE
+#                fallbackuri: forward:/tracker-service-fallback
+#        - id: AUTH-SERVICE
+#          uri: lb://AUTH-SERVICE
+#          predicates:
+#            - Path=/auth/**
+#          filters:
+#            - name: CircuitBreaker
+#              args:
+#                name: AUTH-SERVICE
+#                fallbackuri: forward:/auth-fallback
+      discovery:
+        locator:
+          enabled: true
+      httpclient:
+        response-timeout: 300000
 
 management:
   endpoints:
     web:
       exposure:
         include: hystrix.stream
+    health:
+      show-details: always
 
 eureka:
   client:
