update api size request

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -7,6 +7,12 @@ custom:
 spring:
   config:
     import: "optional:configserver:http://${custom.server-ip}:9005"
+  codec:
+    max-in-memory-size: 50MB
+  servlet:
+    multipart:
+      max-file-size: 50MB  # Maximum file size
+      max-request-size: 50MB
   application:
     name: API-GATEWAY
   boot:
@@ -62,6 +68,9 @@ spring:
           enabled: true
       httpclient:
         response-timeout: 300000
+        max-initial-line-length: 8192
+        max-header-size: 8192
+        max-chunk-size: 512KB
 
 management:
   endpoints:
